# tivoli

./: .gitignore
data/: tivoli.db
scripts/: generate_sample_data.py  migrate_from_old.py
tivoli-ios/: project.yml
tivoli-ios/Resources/: Info.plist
tivoli-ios/Sources/App/: TivoliApp.swift
tivoli-ios/Sources/Models/: Collection.swift  Gallery.swift  ImageSummary.swift  ModelEntity.swift  ModelRef.swift  SearchFilter.swift  ServerConnection.swift  TagGroup.swift  TagRef.swift
tivoli-ios/Sources/Services/: APIClient.swift  ImageCache.swift  ServerStore.swift
tivoli-ios/Sources/Views/: ConnectView.swift  ImagePagerView.swift  MainView.swift  TagEditorView.swift
tivoli-ios/Sources/Views/Components/: CachedAsyncImage.swift  FilterChip.swift  TagChipView.swift  WaterfallGrid.swift  ZoomableImage.swift
tivoli-ios/Tivoli.xcodeproj/: project.pbxproj
tivoli-ios/Tivoli.xcodeproj/project.xcworkspace/xcuserdata/tomasthornquist.xcuserdatad/: UserInterfaceState.xcuserstate
tivoli-ios/Tivoli.xcodeproj/xcuserdata/tomasthornquist.xcuserdatad/xcschemes/: xcschememanagement.plist
tivoli-server/: API.md  Cargo.toml
tivoli-server/src/: db.rs  errors.rs  handlers.rs  lib.rs  main.rs  models.rs  queries.rs
tivoli-server/tests/: api_tests.rs
